test/features/errors/semantic/e1037_invalid_self_param.spl
# E1037: Invalid Self Parameter

Feature: E1037 - Invalid Self Parameter Type
  As a Simple compiler
  I want to detect invalid `self` parameter types in methods
  So that self has valid receiver types

  Background:
    Given I have the Simple compiler

  Scenario: Self with invalid type annotation
    When I compile:
      '''
      struct Counter:
        value: i32

      impl Counter:
        fn method(self: String):  # Error: self must be Counter type
          # implementation
      '''
    Then I should see error E1037 at line 5
    And the error message should be "invalid `self` parameter type"
    And the label should indicate "invalid `self` type"
    And the help should suggest "`self` must have a valid receiver type"

  Scenario: Self with wrong struct type
    When I compile:
      '''
      struct A:
        x: i32

      struct B:
        y: i32

      impl A:
        fn method(self: B):  # Error: self must be A
          # implementation
      '''
    Then I should see error E1037

  Scenario: Valid implicit self
    When I compile:
      '''
      struct Counter:
        value: i32

      impl Counter:
        fn get() -> i32:  # OK: implicit self
          self.value
      '''
    Then compilation should succeed

  Scenario: Valid mutable self with me keyword
    When I compile:
      '''
      struct Counter:
        value: i32

      impl Counter:
        me increment():  # OK: mutable self
          self.value += 1
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      impl Counter:
        fn method(self: WrongType):
          # body
      '''
    Then I should see error E1037
    And the error message should contain "잘못된 Self 매개변수"
